Add missing keys

--- a/packages/admin/dashboard/src/i18n/translations/el.json
+++ b/packages/admin/dashboard/src/i18n/translations/el.json
@@ -83,6 +83,7 @@
       "labels": {
         "key": "Κλειδί",
         "value": "Τιμή"
+        
       },
       "complexRow": {
         "label": "Ορισμένες γραμμές είναι απενεργοποιημένες",
@@ -298,6 +299,9 @@
     }
   },
   "filters": {
+    "sortLabel": "Ταξινόμηση",
+    "filterLabel": "Φιλτράρισμα",
+    "searchLabel": "Αναζήτηση",
     "date": {
       "today": "Σήμερα",
       "lastSevenDays": "Τελευταίες 7 ημέρες",
@@ -306,7 +310,9 @@
       "lastTwelveMonths": "Τελευταίοι 12 μήνες",
       "custom": "Προσαρμοσμένο",
       "from": "Από",
-      "to": "Έως"
+      "to": "Έως",
+      "starting": "Αρχίζοντας",
+      "ending": "Τελειώνοντας"
     },
     "compare": {
       "lessThan": "Λιγότερο από",
@@ -316,6 +322,18 @@
       "lessThanLabel": "λιγότερο από {{value}}",
       "greaterThanLabel": "μεγαλύτερο από {{value}}",
       "andLabel": "και"
+    },
+    "sorting": {
+      "alphabeticallyAsc": "A με Ω",
+      "alphabeticallyDesc": "Z με Α",
+      "dateAsc": "Νεότερο πρώτα",
+      "dateDesc": "Παλιότερο πρώτα"
+    },
+    "radio": {
+      "yes": "Ναι",
+      "no": "Όχι",
+      "true": "Αληθές",
+      "false": "Ψευδές"
     },
     "addFilter": "Προσθήκη φίλτρου"
   },
@@ -468,7 +486,17 @@
       }
     },
     "deleteWarning": "Είστε έτοιμοι να διαγράψετε το προϊόν {{title}}. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
-    "variants": "Παραλλαγές",
+    "variants": {
+      "header": "Παραλλαγές",
+      "empty": {
+        "heading": "Καμία παραλλαγή",
+        "description": "Δεν υπάρχουν παραλλαγές για αυτό το προϊόν."
+      },
+      "filtered": {
+        "heading": "Κανένα αποτέλεσμα",
+        "description": "Καμία παραλλαγή δεν ταιριάζει με τα φίλτρα."
+      }
+    },
     "attributes": "Χαρακτηριστικά",
     "editAttributes": "Επεξεργασία χαρακτηριστικών",
     "editOptions": "Επεξεργασία επιλογών",
@@ -526,6 +554,10 @@
       "discountable": {
         "label": "Με δυνατότητα έκπτωσης",
         "hint": "Όταν δεν είναι επιλεγμένο, οι εκπτώσεις δεν θα εφαρμόζονται σε αυτό το προϊόν"
+      },
+      "shipping_profile": {
+        "label": "Προφίλ αποστολής",
+        "hint": "Σύνδεση προϊόντος με προφίλ αποστολής"
       },
       "type": {
         "label": "Τύπος"
@@ -642,6 +674,29 @@
         "header": "Επεξεργασία οργάνωσης",
         "toasts": {
           "success": "Ενημερώθηκε με επιτυχία η οργάνωση του {{title}}."
+        }
+      }
+    },
+    "stock": {
+      "heading": "Διαχείριση επιπέδων και τοποθεσιών αποθέματος προϊόντων",
+      "description": "Ενημέρωση των επιπέδων αποθεμάτων για όλες τις παραλλαγές του προϊόντος.",
+      "loading": "Περιμένετε, αυτό μπορεί να πάρει λίγο χρόνο...",
+      "tooltips": {
+        "alreadyManaged": "Αυτό το στοιχείο αποθέματος είναι ήδη επεξεργάσιμο στο {{title}}.",
+        "alreadyManagedWithSku": "Αυτό το στοιχείο αποθέματος είναι ήδη επεξεργάσιμο στο {{title}} ({{sku}})."
+      }
+    },
+    "shippingProfile": {
+      "header": "Διαμόρφωση αποστολής",
+      "edit": {
+        "header": "Διαμόρφωση Αποστολής",
+        "toasts": {
+          "success": "Η ενημέρωση του προφίλ αποστολής για το {{title}} ολοκληρώθηκε με επιτυχία."
+        }
+      },
+      "create": {
+        "errors": {
+          "required": "Το προφίλ αποστολής είναι υποχρεωτικό"
         }
       }
     },
@@ -799,6 +854,16 @@
       "updateLocations": "Οι τοποθεσίες ενημερώθηκαν με επιτυχία.",
       "updateLevel": "Το επίπεδο αποθέματος ενημερώθηκε με επιτυχία.",
       "updateItem": "Το αντικείμενο αποθέματος ενημερώθηκε με επιτυχία."
+    },
+    "stock": {
+      "title": "Ενημέρωση επιπέδων αποθέματος",
+      "description": "Ενημέρωση των επιπέδων αποθέματος για τα επιλεγμένα στοιχεία.",
+      "action": "Επεξεργασία επιπέδων αποθέματος",
+      "placeholder": "Μη ενεργοποιημένο",
+      "disablePrompt_one": "Πρόκειται να απενεργοποιήσετε {{count}} επίπεδο τοποθεσίας. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+      "disablePrompt_other": "Πρόκειται να απενεργοποιήσετε {{count}} επίπεδα τοποθεσίας. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+      "disabledToggleTooltip": "Δεν είναι δυνατή η απενεργοποίηση: εκκαθαρίστε την εισερχόμενη ή/και την δεσμευμένη ποσότητα πριν την απενεργοποίηση.",
+      "successToast": "Τα επίπεδα αποθέματος ενημερώθηκαν με επιτυχία."
     }
   },
   "giftCards": {
@@ -872,6 +937,16 @@
   "customerGroups": {
     "domain": "Ομάδες πελατών",
     "subtitle": "Οργανώστε τους πελάτες σε ομάδες. Οι ομάδες μπορούν να έχουν διαφορετικές προσφορές και τιμές.",
+    "list": {
+      "empty": {
+        "heading": "No customer groups",
+        "description": "There are no customer groups to display."
+      },
+      "filtered": {
+        "heading": "No results",
+        "description": "No customer groups match the current filter criteria."
+      }
+    },
     "create": {
       "header": "Δημιουργία ομάδας πελατών",
       "hint": "Δημιουργήστε μια νέα ομάδα πελατών για να κατηγοριοποιήσετε τους πελάτες σας.",
@@ -912,9 +987,19 @@
     "exchange": "Ανταλλαγή",
     "return": "Επιστροφή",
     "cancelWarning": "Είστε έτοιμοι να ακυρώσετε την παραγγελία {{id}}. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+    "orderCanceled": "Η παραγγελία ακυρώθηκε επιτυχώς.",
     "onDateFromSalesChannel": "{{date}} από {{salesChannel}}",
     "list": {
       "noRecordsMessage": "Οι παραγγελίες σας θα εμφανίζονται εδώ."
+    },
+    "status": {
+      "not_paid": "Μη πληρωμένο",
+      "pending": "Σε εκκρεμότητα",
+      "completed": "Ολοκληρώθηκε",
+      "draft": "Πρόχειρο",
+      "archived": "Αρχειοθετημένο",
+      "canceled": "Ακυρώθηκε",
+      "requires_action": "Απαιτείται ενέργεια"
     },
     "summary": {
       "requestReturn": "Αίτημα επιστροφής",
@@ -1183,6 +1268,8 @@
     "fulfillment": {
       "cancelWarning": "Είστε έτοιμοι να ακυρώσετε μια εκπλήρωση. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
       "markAsDeliveredWarning": "Είστε έτοιμοι να σημειώσετε την εκπλήρωση ως παραδομένη. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+      "differentOptionSelected": "Η επιλεγμένη επιλογή αποστολής είναι διαφορετική από αυτήν που επέλεξε ο πελάτης.",
+      "disabledItemTooltip": "Η επιλεγμένη επιλογή αποστολής δεν επιτρέπει την εκπλήρωση αυτού του στοιχείου",
       "unfulfilledItems": "Μη εκπληρωμένα αντικείμενα",
       "statusLabel": "Κατάσταση εκπλήρωσης",
       "statusTitle": "Κατάσταση εκπλήρωσης",
@@ -1203,7 +1290,9 @@
       "error": {
         "wrongQuantity": "Μόνο ένα αντικείμενο είναι διαθέσιμο για εκπλήρωση",
         "wrongQuantity_other": "Η ποσότητα πρέπει να είναι αριθμός μεταξύ 1 και {{number}}",
-        "noItems": "Δεν υπάρχουν αντικείμενα προς εκπλήρωση."
+        "noItems": "Δεν υπάρχουν αντικείμενα προς εκπλήρωση.",
+        "noShippingOption": "Ο τρόπος αποστολής είναι απαραίτητος",
+        "noLocation": "Η τοποθεσία είναι απαραίτητη"
       },
       "status": {
         "notFulfilled": "Μη εκπληρωμένη",
@@ -1463,6 +1552,41 @@
       "pricing": {
         "action": "Επεξεργασία τιμών"
       },
+      "conditionalPrices": {
+        "header": "Υπό Όρους Τιμές για {{name}}",
+        "description": "Διαχειριστείτε τις υπό όρους τιμές για αυτή την επιλογή αποστολής με βάση το συνολικό ποσό του καλαθιού.",
+        "attributes": {
+          "cartItemTotal": "Συνολικό ποσό καλαθιού"
+        },
+        "summaries": {
+          "range": "Αν το <0>{{attribute}}</0> είναι μεταξύ <1>{{gte}}</1> και <2>{{lte}}</2>",
+          "greaterThan": "Αν το <0>{{attribute}}</0> ≥ <1>{{gte}}</1>",
+          "lessThan": "Αν το <0>{{attribute}}</0> ≤ <1>{{lte}}</1>"
+        },
+        "actions": {
+          "addPrice": "Προσθήκη τιμής",
+          "manageConditionalPrices": "Διαχείριση υπό όρους τιμών"
+        },
+        "rules": {
+          "amount": "Τιμή επιλογής αποστολής",
+          "gte": "Ελάχιστο συνολικό ποσό καλαθιού",
+          "lte": "Μέγιστο συνολικό ποσό καλαθιού"
+        },
+        "customRules": {
+          "label": "Προσαρμοσμένοι κανόνες",
+          "tooltip": "Αυτή η υπό όρους τιμή έχει κανόνες που δεν μπορούν να διαχειριστούν στον πίνακα ελέγχου.",
+          "eq": "Το συνολικό ποσό καλαθιού πρέπει να είναι ίσο με",
+          "gt": "Το συνολικό ποσό καλαθιού πρέπει να είναι μεγαλύτερο από",
+          "lt": "Το συνολικό ποσό καλαθιού πρέπει να είναι μικρότερο από"
+        },
+        "errors": {
+          "amountRequired": "Η τιμή επιλογής αποστολής είναι υποχρεωτική",
+          "minOrMaxRequired": "Πρέπει να παρέχεται τουλάχιστον ένα από τα ελάχιστο ή μέγιστο συνολικό ποσό καλαθιού",
+          "minGreaterThanMax": "Το ελάχιστο συνολικό ποσό καλαθιού πρέπει να είναι μικρότερο ή ίσο με το μέγιστο συνολικό ποσό καλαθιού",
+          "duplicateAmount": "Η τιμή επιλογής αποστολής πρέπει να είναι μοναδική για κάθε συνθήκη",
+          "overlappingConditions": "Οι συνθήκες πρέπει να είναι μοναδικές σε όλους τους κανόνες τιμών"
+        }
+      },
       "fields": {
         "count": {
           "shipping_one": "{{count}} επιλογή αποστολής",
@@ -1488,7 +1612,8 @@
           "hint": "Εάν οι πελάτες μπορούν να χρησιμοποιήσουν αυτήν την επιλογή κατά την ολοκλήρωση αγοράς."
         },
         "provider": "Πάροχος εκπλήρωσης",
-        "profile": "Προφίλ αποστολής"
+        "profile": "Προφίλ αποστολής",
+        "fulfillmentOption": "Επιλογή εκπλήρωσης"
       }
     },
     "serviceZones": {
@@ -1868,7 +1993,19 @@
         }
       },
       "status": {
-        "title": "Κατάσταση"
+        "label": "Κατάσταση",
+        "draft": {
+          "title": "Πρόχειρη",
+          "description": "Οι πελάτες δε θα μπορούν να χρησιμοποιήσουν τον κωδικό ακόμα"
+        },
+        "active": {
+          "title": "Ενεργή",
+          "description": "Οι πελάτες θα μπορούν να χρησιμοποιήσουν τον κωδικό"
+        },
+        "inactive": {
+          "title": "Ανενεργή",
+          "description": "Οι πελάτες δε θα μπορούν να χρησιμοποιήσουν τον κωδικό πλέον"
+        }
       },
       "method": {
         "label": "Μέθοδος",
@@ -2165,7 +2302,18 @@
       "developer": "Προγραμματιστής",
       "member": "Μέλος"
     },
+    "list": {
+      "empty": {
+        "heading": "Δε βρέθηκαν χρήστες",
+        "description": "Μόλις προσκληθεί ένας χρήστης, θα εμφανιστεί εδώ."
+      },
+      "filtered": {
+        "heading": "Κανένα αποτέλεσμα",
+        "description": "Δε βρέθηκε κανένας χρήστης με αυτά τα κριτήρια φιλτραρίσματος."
+      }
+    },
     "deleteUserWarning": "Είστε έτοιμοι να διαγράψετε τον χρήστη {{name}}. Αυτή η ενέργεια δεν μπορεί να αναιρεθεί.",
+    "deleteUserSuccess": "Ο χρήστης {{name}} διαγράφηκε επιτυχώς.",
     "invite": "Πρόσκληση"
   },
   "store": {
@@ -2614,6 +2762,8 @@
     "scheduled": "Προγραμματισμένη",
     "expired": "Ληγμένη",
     "active": "Ενεργή",
+    "inactive": "Ανενεργή",
+    "draft": "Πρόχειρη",
     "enabled": "Ενεργοποιημένη",
     "disabled": "Απενεργοποιημένη"
   },
@@ -2625,7 +2775,9 @@
     "added": "Προστέθηκε",
     "removed": "Αφαιρέθηκε",
     "from": "Από",
-    "to": "Προς"
+    "to": "Προς",
+    "beaware": "Προσοχή",
+    "loading": "Φόρτωση"
   },
   "fields": {
     "amount": "Ποσό",
