docs: document payment changes + account holder

--- a/www/apps/resources/app/commerce-modules/payment/page.mdx
+++ b/www/apps/resources/app/commerce-modules/payment/page.mdx
@@ -21,6 +21,7 @@ Learn more about why modules are isolated in [this documentation](!docs!/learn/f
 - [Authorize, Capture, and Refund Payments](./payment/page.mdx): Authorize, capture, and refund payments for a single resource.
 - [Payment Collection Management](./payment-collection/page.mdx): Store and manage all payments of a single resources, such as a cart, in payment collections.
 - [Integrate Third-Party Payment Providers](./payment-provider/page.mdx): Use payment providers like [Stripe](./payment-provider/stripe/page.mdx) to handle and process payments, or integrate custom payment providers.
+- [Saved Payment Methods](./account-holder/page.mdx): Save payment methods for customers in third-party payment providers.
 - [Handle Webhook Events](./webhook-events/page.mdx): Handle webhook events from third-party providers and process the associated payment.
 
 ---
