--- a/packages/admin/dashboard/src/i18n/translations/tr.json
+++ b/packages/admin/dashboard/src/i18n/translations/tr.json
@@ -136,7 +136,8 @@
     "logout": "Çıkış Yap",
     "hide": "Gizle",
     "export": "Dışa Aktar",
-    "import": "İçe Aktar"
+    "import": "İçe Aktar",
+    "cannotUndo": "Bu işlem geri alınamaz"
   },
   "operators": {
     "in": "İçinde"
@@ -305,7 +306,9 @@
       "lastTwelveMonths": "Son 12 ay",
       "custom": "Özel",
       "from": "Başlangıç",
-      "to": "Bitiş"
+      "to": "Bitiş",
+      "starting": "Başlangıç",
+      "ending": "Bitiş"
     },
     "compare": {
       "lessThan": "Küçüktür",
@@ -322,7 +325,16 @@
       "true": "Doğru",
       "false": "Yanlış"
     },
-    "addFilter": "Filtre Ekle"
+    "addFilter": "Filtre Ekle",
+    "sortLabel": "Sıralama",
+    "filterLabel": "Filtre",
+    "searchLabel": "Arama",
+    "sorting": {
+      "alphabeticallyAsc": "A'dan Z'ye",
+      "alphabeticallyDesc": "Z'den A'ya",
+      "dateAsc": "Yeniden eskiye",
+      "dateDesc": "Eskiye yeniden"
+    }
   },
   "errorBoundary": {
     "badRequestTitle": "400 - Hatalı İstek",
@@ -594,6 +606,10 @@
       },
       "hs_code": {
         "label": "HS kodu"
+      },
+      "shipping_profile": {
+        "label": "Kargo profili",
+        "hint": "Ürünü bir kargo profili ile ilişkilendirin"
       }
     },
     "variant": {
@@ -668,6 +684,29 @@
         },
         "error": {
           "header": "Ürün silinemedi"
+        }
+      }
+    },
+    "stock": {
+      "heading": "Ürün stok seviyelerini ve konumlarını yönetin",
+      "description": "Tüm ürün varyantlarının stok seviyelerini güncelleyin.",
+      "loading": "Bu biraz zaman alabilir...",
+      "tooltips": {
+        "alreadyManaged": "Bu envanter öğesi zaten {{title}} altında düzenlenebilir.",
+        "alreadyManagedWithSku": "Bu envanter öğesi zaten {{title}} altında düzenlenebilir ({{sku}})."
+      }
+    },
+    "shippingProfile": {
+      "header": "Kargo yapılandırması",
+      "edit": {
+        "header": "Kargo yapılandırması",
+        "toasts": {
+          "success": "Kargo yapılandırması başarıyla güncellendi."
+        }
+      },
+      "create": {
+        "errors": {
+          "required": "Kargo yapılandırması gereklidir"
         }
       }
     }
@@ -809,6 +848,21 @@
       "updateLocations": "Konumlar başarıyla güncellendi.",
       "updateLevel": "Envanter seviyesi başarıyla güncellendi.",
       "updateItem": "Envanter öğesi başarıyla güncellendi."
+    },
+    "adjustInventory": {
+      "errors": {
+        "stockedQuantity": "Stok miktarı, rezerve edilen miktar olan {{quantity}}'den daha az olarak güncellenemez."
+      }
+    },
+    "stock": {
+      "title": "Stok Yönetimi",
+      "description": "Ürün stok seviyelerini ve konumlarını yönetin",
+      "action": "Stok seviyelerini düzenle",
+      "placeholder": "Etkin değil",
+      "disablePrompt_one": "{{count}} konum seviyesini devre dışı bırakmak üzeresiniz. Bu işlem geri alınamaz.",
+      "disablePrompt_other": "{{count}} konum seviyesini devre dışı bırakmak üzeresiniz. Bu işlem geri alınamaz.",
+      "disabledToggleTooltip": "Devre dışı bırakılamaz: devre dışı bırakmadan önce gelen ve/veya rezerve edilmiş miktarı temizleyin.",
+      "successToast": "Stok seviyeleri başarıyla güncellendi."
     }
   },
   "giftCards": {
@@ -913,6 +967,16 @@
       },
       "list": {
         "noRecordsMessage": "Bu grupta müşteri yok."
+      }
+    },
+    "list": {
+      "filtered": {
+        "heading": "Sonuç yok",
+        "description": "Hiçbir müşteri grubu mevcut filtre kriterlerine uymuyor."
+      },
+      "empty": {
+        "heading": "Müşteri grubu bulunamadı",
+        "description": "Bir kullanıcı davet edildiğinde, burada görünecektir."
       }
     }
   },
@@ -1199,7 +1263,9 @@
       "error": {
         "wrongQuantity": "Tamamlanacak sadece bir ürün mevcut",
         "wrongQuantity_other": "Miktar 1 ile {{number}} arasında olmalıdır",
-        "noItems": "Tamamlanacak ürün yok."
+        "noItems": "Tamamlanacak ürün yok.",
+        "noShippingOption": "Kargo seçeneği gereklidir",
+        "noLocation": "Konum gereklidir"
       },
       "status": {
         "notFulfilled": "Tamamlanmadı",
@@ -1222,7 +1288,9 @@
       },
       "trackingLabel": "Takip",
       "shippingFromLabel": "Gönderen",
-      "itemsLabel": "Ürünler"
+      "itemsLabel": "Ürünler",
+      "differentOptionSelected": "Seçilen kargo seçeneği müşterinin seçtiğinden farklı.",
+      "disabledItemTooltip": "Seçtiğiniz kargo seçeneği bu ürünün tamamlanmasına izin vermiyor"
     },
     "refund": {
       "title": "İade Oluştur",
@@ -1309,7 +1377,13 @@
         },
         "transfer": {
           "requested": "Sipariş devri #{{transferId}} talep edildi",
-          "confirmed": "Sipariş devri #{{transferId}} onaylandı"
+          "confirmed": "Sipariş devri #{{transferId}} onaylandı",
+          "declined": "Sipariş transferi #{{transferId}} reddedildi"
+        },
+        "update_order": {
+          "shipping_address": "Teslimat adresi güncellendi",
+          "billing_address": "Fatura adresi güncellendi",
+          "email": "E-posta güncellendi"
         }
       }
     },
@@ -1317,6 +1391,30 @@
       "displayId": "Görüntüleme Kimliği",
       "refundableAmount": "İade edilebilir tutar",
       "returnableQuantity": "İade edilebilir miktar"
+    },
+    "orderCanceled": "Sipariş başarıyla iptal edildi",
+    "status": {
+      "not_paid": "Ödenmedi",
+      "pending": "Beklemede",
+      "completed": "Tamamlandı",
+      "draft": "Taslak",
+      "archived": "Arşivlendi",
+      "canceled": "İptal edildi",
+      "requires_action": "İşlem gerekiyor"
+    },
+    "edit": {
+      "email": {
+        "title": "E-postayı düzenle",
+        "requestSuccess": "Sipariş e-postası {{email}} olarak güncellendi."
+      },
+      "shippingAddress": {
+        "title": "Teslimat adresini düzenle",
+        "requestSuccess": "Sipariş teslimat adresi güncellendi."
+      },
+      "billingAddress": {
+        "title": "Fatura adresini düzenle",
+        "requestSuccess": "Sipariş fatura adresi güncellendi."
+      }
     }
   },
   "draftOrders": {
@@ -1422,12 +1520,47 @@
       "successToast": "Satış kanalları başarıyla güncellendi."
     },
     "shippingOptions": {
+      "conditionalPrices": {
+        "header": "{{name}} için Koşullu Fiyatlar",
+        "description": "Bu kargo seçeneği için koşullu fiyatları sepet ürün toplamına göre yönetin.",
+        "attributes": {
+          "cartItemTotal": "Sepet ürün toplamı"
+        },
+        "summaries": {
+          "range": "Eğer <0>{{attribute}}</0> <1>{{gte}}</1> ile <2>{{lte}}</2> arasındaysa",
+          "greaterThan": "Eğer <0>{{attribute}}</0> ≥ <1>{{gte}}</1>",
+          "lessThan": "Eğer <0>{{attribute}}</0> ≤ <1>{{lte}}</1>"
+        },
+        "actions": {
+          "addPrice": "Fiyat ekle",
+          "manageConditionalPrices": "Koşullu fiyatları yönet"
+        },
+        "rules": {
+          "amount": "Kargo seçeneği fiyatı",
+          "gte": "Minimum sepet ürün toplamı",
+          "lte": "Maksimum sepet ürün toplamı"
+        },
+        "customRules": {
+          "label": "Özel kurallar",
+          "tooltip": "Bu koşullu fiyat, yönetim panelinde yönetilemeyen kurallara sahip.",
+          "eq": "Sepet ürün toplamı şuna eşit olmalı",
+          "gt": "Sepet ürün toplamı bundan büyük olmalı",
+          "lt": "Sepet ürün toplamı bundan küçük olmalı"
+        },
+        "errors": {
+          "amountRequired": "Kargo seçeneği fiyatı gereklidir",
+          "minOrMaxRequired": "Minimum veya maksimum sepet ürün toplamından en az biri sağlanmalıdır",
+          "minGreaterThanMax": "Minimum sepet ürün toplamı, maksimum sepet ürün toplamından küçük veya eşit olmalıdır",
+          "duplicateAmount": "Kargo seçeneği fiyatı her koşul için benzersiz olmalıdır",
+          "overlappingConditions": "Koşullar tüm fiyat kuralları arasında benzersiz olmalıdır"
+        }
+      },
       "create": {
         "shipping": {
-          "header": "{{zone}} için Teslimat Seçeneği Oluştur",
-          "hint": "Bu konumdan ürünlerin nasıl gönderileceğini tanımlamak için yeni bir teslimat seçeneği oluşturun.",
-          "label": "Teslimat seçenekleri",
-          "successToast": "Teslimat seçeneği {{name}} başarıyla oluşturuldu."
+          "header": "{{zone}} için Kargo Seçeneği Oluştur",
+          "hint": "Bu konumdan ürünlerin nasıl gönderileceğini tanımlamak için yeni bir kargo seçeneği oluşturun.",
+          "label": "Kargo seçenekleri",
+          "successToast": "Kargo seçeneği {{name}} başarıyla oluşturuldu."
         },
         "returns": {
           "header": "{{zone}} için İade Seçeneği Oluştur",
@@ -1442,21 +1575,21 @@
         "action": "Seçenek oluştur"
       },
       "delete": {
-        "confirmation": "teslimat seçeneği {{name}} silinmek üzere. Bu işlem geri alınamaz.",
-        "successToast": "teslimat seçeneği {{name}} başarıyla silindi."
+        "confirmation": "Kargo seçeneği {{name}} silinmek üzere. Bu işlem geri alınamaz.",
+        "successToast": "Kargo seçeneği {{name}} başarıyla silindi."
       },
       "edit": {
-        "header": "teslimat Seçeneğini Düzenle",
+        "header": "Kargo Seçeneğini Düzenle",
         "action": "Seçeneği düzenle",
-        "successToast": "teslimat seçeneği {{name}} başarıyla güncellendi."
+        "successToast": "Kargo seçeneği {{name}} başarıyla güncellendi."
       },
       "pricing": {
         "action": "Fiyatları düzenle"
       },
       "fields": {
         "count": {
-          "shipping_one": "{{count}} teslimat seçeneği",
-          "shipping_other": "{{count}} teslimat seçeneği",
+          "shipping_one": "{{count}} kargo seçeneği",
+          "shipping_other": "{{count}} kargo seçeneği",
           "returns_one": "{{count}} iade seçeneği",
           "returns_other": "{{count}} iade seçeneği"
         },
@@ -1465,11 +1598,11 @@
           "options": {
             "fixed": {
               "label": "Sabit",
-              "hint": "teslimat seçeneğinin fiyatı sabittir ve siparişin içeriğine göre değişmez."
+              "hint": "Kargo seçeneğinin fiyatı sabittir ve siparişin içeriğine göre değişmez."
             },
             "calculated": {
               "label": "Hesaplanmış",
-              "hint": "teslimat seçeneğinin fiyatı, ödeme sırasında tamamlama sağlayıcısı tarafından hesaplanır."
+              "hint": "Kargo seçeneğinin fiyatı, ödeme sırasında tamamlama sağlayıcısı tarafından hesaplanır."
             }
           }
         },
@@ -1478,7 +1611,8 @@
           "hint": "Müşterilerin bu seçeneği ödeme sırasında kullanıp kullanamayacağı."
         },
         "provider": "Tamamlama sağlayıcısı",
-        "profile": "teslimat profili"
+        "profile": "Kargo profili",
+        "fulfillmentOption": "Tamamlama seçeneği"
       }
     },
     "serviceZones": {
@@ -1857,9 +1991,6 @@
           "description": "Promosyonu kampanyaya bağlamadan devam et"
         }
       },
-      "status": {
-        "title": "Durum"
-      },
       "method": {
         "label": "Yöntem",
         "code": {
@@ -1910,6 +2041,21 @@
         "percentage": {
           "title": "Promosyon Değeri",
           "description": "İndirim yüzdesi. Örn: %8"
+        }
+      },
+      "status": {
+        "label": "Durum",
+        "draft": {
+          "title": "Taslak",
+          "description": "Promosyon henüz tamamlanmamıştır."
+        },
+        "active": {
+          "title": "Aktif",
+          "description": "Promosyon etkinleştirildi."
+        },
+        "inactive": {
+          "title": "Pasif",
+          "description": "Promosyon devre dışı bırakıldı."
         }
       }
     },
@@ -2156,7 +2302,18 @@
       "member": "Üye"
     },
     "deleteUserWarning": "{{name}} kullanıcısını silmek üzeresiniz. Bu işlem geri alınamaz.",
-    "invite": "Davet Et"
+    "invite": "Davet Et",
+    "list": {
+      "empty": {
+        "heading": "Kullanıcı bulunamadı",
+        "description": "Bir kullanıcı davet edildiğinde, burada görünecektir."
+      },
+      "filtered": {
+        "heading": "Sonuç yok",
+        "description": "Hiçbir kullanıcı mevcut filtre kriterlerine uymuyor."
+      }
+    },
+    "deleteUserSuccess": "Kullanıcı {{name}} başarıyla silindi"
   },
   "store": {
     "domain": "Mağaza",
@@ -2182,7 +2339,9 @@
       "currenciesUpdated": "Para birimleri başarıyla güncellendi",
       "currenciesRemoved": "Para birimleri mağazadan başarıyla kaldırıldı",
       "updatedTaxInclusivitySuccessfully": "Vergi dahil fiyatlandırma başarıyla güncellendi"
-    }
+    },
+    "defaultSalesChannel": "Varsayılan satış kanalı",
+    "defaultLocation": "Varsayılan konum"
   },
   "regions": {
     "domain": "Bölgeler",
@@ -2333,6 +2492,9 @@
           "noRecordsMessage": "Önce bir ürün oluşturun."
         }
       }
+    },
+    "tooltip": {
+      "cannotDeleteDefault": "Varsayılan satış kanalı silinemez"
     }
   },
   "apiKeyManagement": {
@@ -2602,7 +2764,9 @@
     "expired": "Süresi Dolmuş",
     "active": "Aktif",
     "enabled": "Etkin",
-    "disabled": "Devre Dışı"
+    "disabled": "Devre Dışı",
+    "inactive": "Pasif",
+    "draft": "Taslak"
   },
   "labels": {
     "productVariant": "Ürün Varyantı",
@@ -2610,7 +2774,11 @@
     "available": "Mevcut",
     "inStock": "Stokta Var",
     "added": "Eklendi",
-    "removed": "Kaldırıldı"
+    "removed": "Kaldırıldı",
+    "from": "Kimden",
+    "to": "Kime",
+    "beaware": "Dikkat",
+    "loading": "Yükleniyor"
   },
   "fields": {
     "amount": "Miktar",
@@ -2767,7 +2935,8 @@
     "startDate": "Başlangıç Tarihi",
     "endDate": "Bitiş Tarihi",
     "draft": "Taslak",
-    "values": "Değerler"
+    "values": "Değerler",
+    "by": "Tarafından"
   },
   "dateTime": {
     "years_one": "Yıl",
