--- a/www/apps/resources/app/commerce-modules/product/links-to-other-modules/page.mdx
+++ b/www/apps/resources/app/commerce-modules/product/links-to-other-modules/page.mdx
@@ -90,6 +90,12 @@ Medusa defines a link between the `ProductVariant` and `InventoryItem` data mode
 
 When the `manage_inventory` property of a product variant is enabled, you can manage the variant's inventory in different locations through this relation.
 
+<Note title="Tip">
+
+Learn more about product variant's inventory management in [this guide](../variant-inventory/page.mdx).
+
+</Note>
+
 ### Retrieve with Query
 
 To retrieve the inventory items of a product variant with [Query](!docs!/learn/fundamentals/module-links/query), pass `inventory_items.*` in `fields`:
