--- a/www/apps/resources/app/commerce-modules/product/variant-inventory/page.mdx
+++ b/www/apps/resources/app/commerce-modules/product/variant-inventory/page.mdx
@@ -79,6 +79,6 @@ You can also allow customers to subscribe to restock notifications of a product 
 
 The following guides provide more details on inventory management in the Medusa application:
 
-- [Inventory Kits in the Inventory Module](../../inventory/inventory-kit/page.mdx): Learn how you can implement bundled or multi-part products through the inventory Module.
+- [Inventory Kits in the Inventory Module](../../inventory/inventory-kit/page.mdx): Learn how you can implement bundled or multi-part products through the Inventory Module.
 - [Inventory in Flows](../../inventory/inventory-in-flows/page.mdx): Learn how Medusa utilizes inventory management in different flows.
 - [Storefront guide: how to retrieve a product variant's inventory details](https://docs.medusajs.com/resources/storefront-development/products/inventory).
